--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Home | Gross Calculator</title>
         <link rel="stylesheet" href="css/style.css"/>
+        <script src="javascript/main.js"></script>
     </head>
     <body>
         <h1>Gross Salary Calculator</h1>
@@ -16,7 +17,7 @@
                 
                 <label>
                     <span> </span>
-                    <input type="button" value="Calculate gross salary"/>
+                    <input onclick="calculateGrossSalary()"  type="button" value="Calculate gross salary"/>
                 </label>
             </form>
 
